[package]
name = "starbet-live"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.0", features = ["macros"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.33.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
serde = "1.0.193"
uuid = "1.6.1"
redis = { version = "0.23.3", features = ["tokio-native-tls-comp"] }
bb8 = "0.8.1"
bb8-redis = "0.13.1"
askama = "0.12.1"
regex = "1.5.4"
