[package]
name = "starbet-live"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.0", features = ["macros", "ws"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.33.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.112"
rmp-serde = "1.1.2"
uuid = "1.6.1"
bb8 = "0.8.1"
bb8-redis = "0.14.0"
askama = "0.12.1"
float-cmp = "0.9.0"
regex = "1.5.4"
argon2 = "0.5.2"
time = "0.3.31"
barrage = "0.2.3"
reqwest = "0.11.23"
futures = "0.3.30"
cynic = { version = "3.4.3", features = ["http-reqwest"] }
cynic-codegen = { version = "3.4.3" }

# older versions required, can't manage to get it to work with latest
tower-sessions = { version = "0.9.1", features = ["redis-store"] }
axum-login = "0.12.0"

[build-dependencies]
cynic-codegen = { version = "3.4.3" }
